--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-		<script src ="js/script.js"></script>
+		<script src ="js/constructor.js"></script>
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
