Сделано деление популяций

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 		<meta charset="utf-8">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 		<script src ="js/constructor.js"></script>
+		<script src ="js/entitys.js"></script>
+		<script src ="js/game.js"></script>
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
